# values-compass

./: .env.sample  .envrc  .gitignore  CLAUDE.md  CLAUDE.org  Makefile  Makefile.data  README.org  TOMORROW.md  ai_values_taxonomy.mmd  analysis-mussolini-dof.org  cross-framework-mapping.org  dataset-exploration.org  package-lock.json  package.json  presentation.org  pyproject.toml  requirements.txt  rfk-mlk-speech-social-values-analysis.org  setup.py  values-tree-analysis.org  values_tree_prioritized.csv
.claude/commands/: commit.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: validate.yml
data/: anti_values.csv
docs/: README.md  README.org  ai_values_analysis.md  cross_framework_mapping.md  database-stats.txt  initial-analysis.md  philosophy-reading-list.org  presentation-setup.org  values_tree_diagram.mmd
docs/analysis/: README.md  README.org
docs/guides/: initial-analysis.org  mathematical-foundation.org
docs/hierarchy/: README.md  README.org  ai_values_hierarchy.md  l1_lookup.json  l1_to_l2.json  l2_children.json  l2_lookup.json  l2_to_l3.json  l3_children.json  l3_lookup.json
docs/presentations/: README.org
docs/resources/: taxonomy-tools.org
docs/visualizations/: ai_ethics_to_human_values.md  ai_values_taxonomy.md  ai_values_taxonomy.mmd  ai_values_taxonomy_simplified.mmd  cross_domain_mapping_plan.md  cross_framework_diagram.mmd  epistemic_values_roget_style.json  epistemic_values_sample_encoding.org  framework_mapping_tables.md  roget_encoding_schema.json  roget_encoding_schema.org  values_transit_map.mmd  values_transit_map.tex
docs/visualizations/priorities/: priority_analysis.md  priority_summary.md
images/references/: attribution.org  attribution.txt
notebooks/: exploration.org
scripts/: README.md  README.org  activate.sh  ai_values_clusters.py  ai_values_clusters_simple.py  ai_values_taxonomy_with_priorities.py  analyze_ai_values_by_level.py  anti_value_clusters.py  build_values_ontology.py  convert_mermaid_to_png.py  create_epistemic_thesaurus.py  create_value_hierarchy_lookup.py  cross_framework_visualization.py  embedding_clusters.py  extract_epistemic_values.py  extract_epistemic_values_simple.py  fix_db.py  generate_values_taxonomy_image.py  leventhal_map.py  priority_classifier.py  schwartz_values_mapper.py  simple_top_values.py  static_value_clusters.py  value_similarity.py  values_taxonomy_diagram.py  values_transit_map.py  visualize_correct_hierarchy.py  visualize_prioritized_clusters.py
scripts/presentations/: prepare_presentation_images.sh  setup_org_beamer.el  setup_presentation.sh
stories/: META-VALUE-INTEGRATION-SR-2.2.4-25-04-30.org  README.org  book-of-synthetic-virtues.org  enumerating-value-space.org  infinite-library-algorithmic-ethics.org  moral-auditors-last-report-narrative-structure.org  moral-auditors-last-report.org  moral-auditors-narrative-structure.org  tlon-uqbar-orbis-tertius.org
stories/moral-auditors-last-report/: 2025-05-03-4076J-PMAF.org  COE-V3307-25-05-02-TAXDEPT-ANOMALOUS-VALUE-PROLIFERATION.txt  IAE-V-22-143.org  TAXONOMY-PATCH-3308-META-DOMAIN-INTEGRATION.org  TD-COE-V3307-25-05-02-APPENDIX-A.txt  VAL-CLASS-9.8.4-SPEC.org  form-17D-employee-property-surrender.txt  form-33A-anomalous-algorithm-behavior-report.txt  form-45B-weekly-anomaly-tabulation.txt  form-62C-taxonomy-amendment-proposal.txt  generate_performance_chart.py  meta-taxonomy-visualization.dot  morning-performance-metrics.org  taxonomy-department-forms.org  taxonomy-integration.el  taxonomy-ontology.owl  taxonomy-reference-2023.org  visualization.el
stories/moral-auditors-last-report/algorithm-specs/: VAL-CLASS-9.7.2-SPEC.org  VAL-CLASS-9.8.3-SPEC.org  VAL-CLASS-9.8.3-TO-9.8.4-MIGRATION.txt  VAL-CLASS-9.8.4-DEPLOYMENT-TIMELINE.txt
values_compass/: __init__.py  formalize_relations.py  validate_pairs.py  visualize.py
values_compass/structures/: __init__.py  lattice.py
values_explorer/: __init__.py  main.py
values_explorer/analysis/: __init__.py  clustering.py  visualization.py
values_explorer/data/: __init__.py  loader.py
values_explorer/models/: __init__.py  value_processor.py
values_explorer/utils/: __init__.py  helpers.py
(+3 files in other folders)
