[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "values_explorer"
description = "A toolkit for exploring the Anthropic Values-in-the-Wild dataset"
readme = "README.org"
requires-python = ">=3.8"
authors = [
    {name = "Aidan Pace", email = "apace@defrecord.com"},
]
maintainers = [
    {name = "Jason Walsh", email = "j@wal.sh"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "datasets>=2.9.0",
    "huggingface-hub>=0.12.0",
    "matplotlib>=3.5.0",
    "networkx>=2.7.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "torch>=1.10.0",
    "transformers>=4.15.0",
]
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/aygp-dr/values-compass"
Documentation = "https://github.com/aygp-dr/values-compass"
Repository = "https://github.com/aygp-dr/values-compass.git"
Issues = "https://github.com/aygp-dr/values-compass/issues"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools]
packages = ["values_explorer"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W", "B", "A"]
ignore = []